# roving

./: .gitignore  Gopkg.toml  Makefile  README.md  WORKSPACE
client/: BUILD.bazel  client.go  fuzzer.go  main.go  main_test.go  queue_downloader.go  server_client.go  server_client_test.go  state_uploader.go
client/work/: fuzzer_stats
client/work/output/foo/: fuzzer_stats
cmd/client/: BUILD.bazel  main.go
cmd/e2e-test/: BUILD.bazel  README.md  harness.rb  main.go
cmd/multi-client/: BUILD.bazel  main.go
cmd/srv/: BUILD.bazel  main.go
example/: target.c
examples/: c-server  e2e  generic-client  ruby-server
examples/client/ruby/: Gemfile  harness.rb
examples/client/ruby-complex/: Gemfile  harness.rb
examples/client/ruby-complex/codegen/: generate_def_code.rb
examples/server/: dict.txt
server/: BUILD.bazel  admin.go  app.go  archiver.go  archiver_test.go  dummy.go  main.go  metrics_poller.go  nodes.go  reaper.go  server.go  server_test.go
server/templates/: _header.html  archive.html  index.html  input.html  output.html
types/: BUILD.bazel  config.go  files.go  files_test.go  fleet_file_manager.go  fleet_file_manager_test.go  metrics.go  stats.go  stats_test.go  types.go
