load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/richo/roving/cmd/e2e-test",
    visibility = ["//visibility:private"],
    deps = [
        "//client:go_default_library",
        "//server:go_default_library",
        "//types:go_default_library",
    ],
)

go_binary(
    name = "e2e-test",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
