load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_embed_data", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/richo/roving/cmd/srv",
    visibility = ["//visibility:private"],
    deps = [
        "//server:go_default_library",
        "//types:go_default_library",
    ],
)

go_binary(
    name = "srv",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
